added environment variables to the .platform.app.yaml file

--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -39,3 +39,7 @@ hooks:
         rm -rf logs
     deploy: |
         python manage.py migrate
+
+variables:
+  env:
+    DJANGO_SETTINGS_MODULE: "ll_project.settings"
