--- a/render.yaml
+++ b/render.yaml
@@ -8,7 +8,7 @@ services:
 "
     envVars:
       - key: DJANGO_SETTINGS_MODULE
-        value: ll_project.settings
+        value: /opt/render/project/src/blog-app
       - key: SECRET_KEY
         generateValue: true
       - key: DEBUG
