modified5:   render.yaml

--- a/render.yaml
+++ b/render.yaml
@@ -7,8 +7,10 @@ services:
 "
 "
     envVars:
-      - key: DJANGO_SETTINGS_MODULE
+      - key: PYTHONPATH
         value: /opt/render/project/src/blog-app
+      - key: DJANGO_SETTINGS_MODULE
+        value: ll_project.settings
       - key: SECRET_KEY
         generateValue: true
       - key: DEBUG
