--- a/render.yaml
+++ b/render.yaml
@@ -1,14 +1,13 @@
 services:
-  - type: web
-    name: blog-app
-    env: python-3.11
-    buildCommand: "pip install -r requirements.txt"
-    startCommand: "gunicorn --chdir /opt/render/project/src/blog-app ll_project.wsgi:application --bind 0.0.0.0:8000"
+   - type: web
+     plan: free
+     name: blog-app
+     runtime: python
+     buildCommand: "pip install -r requirements.txt"
+     startCommand: "gunicorn ll_project.wsgi:application --bind 0.0.0.0:8000"
 
 
-    envVars:
-      - key: PYTHONPATH
-        value: /opt/render/project/src/blog-app 
+     envVars:
       - key: DJANGO_SETTINGS_MODULE
         value: ll_project.settings
       - key: SECRET_KEY
