changes in render.yaml file version 1.0

--- a/render.yaml
+++ b/render.yaml
@@ -8,6 +8,8 @@ services:
 
 
      envVars:
+      - key: PYTHONPATH
+        value: /opt/render/project/src/blog-app 
       - key: DJANGO_SETTINGS_MODULE
         value: ll_project.settings
       - key: SECRET_KEY
