--- a/render.yaml
+++ b/render.yaml
@@ -4,12 +4,12 @@ services:
      name: blog-app
      runtime: python
      buildCommand: "pip install -r requirements.txt"
-     startCommand: "cd /opt/render/project/src/blog-app && gunicorn ll_project.wsgi:application --bind 0.0.0.0:8000"
+     startCommand: "cd /opt/render/project/src && gunicorn ll_project.wsgi:application --bind 0.0.0.0:8000"
 
 
      envVars:
       - key: PYTHONPATH
-        value: "/opt/render/project/src/blog-app"
+        value: "/opt/render/project/src"
       - key: DJANGO_SETTINGS_MODULE
         value: "ll_project.settings"
       - key: SECRET_KEY
