--- a/render.yaml
+++ b/render.yaml
@@ -4,12 +4,12 @@ services:
      name: blog-app
      runtime: python
      buildCommand: "pip install -r requirements.txt"
-     startCommand: "export PYTHONPATH=/opt/render/project/src && echo 'PYTHONPATH is set to: ' $PYTHONPATH && gunicorn ll_project.wsgi:application --bind 0.0.0.0:8000"
+     startCommand: "export PYTHONPATH=/opt/render/project/src && export DJANGO_SETTINGS_MODULE=ll_project.settings && echo 'PYTHONPATH is set to: ' $PYTHONPATH && echo 'DJANGO_SETTINGS_MODULE is set to: ' $DJANGO_SETTINGS_MODULE && gunicorn ll_project.wsgi:application --bind 0.0.0.0:8000"
+
+
 
 
      envVars:
-      - key: PYTHONPATH
-        value: "/opt/render/project/src"
       - key: DJANGO_SETTINGS_MODULE
         value: "ll_project.settings"
       - key: SECRET_KEY
