--- a/render.yaml
+++ b/render.yaml
@@ -1,41 +1,8 @@
 services:
-   - type: web
-     plan: free
-     name: blog-app
-     runtime: python
-     buildCommand: "pip install -r requirements.txt && ls -R /opt/render/project/src/blog-app"
-     startCommand: "export PYTHONPATH=/opt/render/project/src/blog-app:$PYTHONPATH && export DJANGO_SETTINGS_MODULE=ll_project.settings && gunicorn ll_project.wsgi:application --bind 0.0.0.0:8000"
-
-
-
-
-
-     envVars:
-      - key: PYTHONPATH
-        value: "/opt/render/project/src/blog-app"
-      - key: DJANGO_SETTINGS_MODULE
-        value: "ll_project.settings"
-      - key: SECRET_KEY
-        generateValue: true
-      - key: DEBUG
-        value: "False"
-      - key: RDS_DB_NAME
-        fromDatabase:
-          name: db-blog-app
-          property: name
-      - key: RDS_USERNAME
-        fromDatabase:
-          name: db-blog-app
-          property: user
-      - key: RDS_PASSWORD
-        fromDatabase:
-          name: db-blog-app
-          property: password
-      - key: RDS_HOSTNAME
-        fromDatabase:
-          name: db-blog-app
-          property: host
-      - key: RDS_PORT
-        fromDatabase:
-          name: db-blog-app
-          property: port
+    - type: web
+      plan: free
+      name: blog-app
+      runtime: python
+      buildCommand: "./build.sh"
+      startCommand: "gunicorn ll_project.asgi:application -k uvicorn.workers.UvicornWorker"
+      
